<resources>
    <string name="app_name">Web API test</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="something_went_wrong">Sorry, something went wrong</string>
    <string name="fill_in_fields">Please fill in the fields</string>
    <string name="error">Error</string>
    <string name="na">N/A</string>
    <string name="role_id_replaceable">&lt;b>roleId:&lt;/b> %s</string>
    <string name="username_replaceable">&lt;b>username:&lt;/b> %s</string>
    <string name="email_replaceable">&lt;b>email:&lt;/b> %s</string>
    <string name="permissions"><b>Permissions:</b></string>
    <string name="log_out">Log out</string>
</resources>